commit before going home

--- a/our-team.html
+++ b/our-team.html
@@ -108,6 +108,7 @@
         </div>
       </header>
       <!-- Modern Breadcrumbs-->
+    <main class="page-content">
       <section class="rdparallax">
           <div class="rdparallaxlayer  section-66 section-sm-66">
             <div class="shell">
