--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -107,126 +107,120 @@
           </nav>
         </div>
       </header>
-      <!-- Modern Breadcrumbs-->
-      <section class="breadcrumb-modern context-dark text-md-left">
-        <div class="shell section-34 section-md-top-110 section-md-bottom-41">
-          <h1>Gallery</h1>
-          <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
-            <li><a href="index.html" class="text-primary">Home</a></li>
-            <li><a href="grid-gallery.html" class="text-primary">Gallery</a></li>
-            <li>Before and After Gallery
-            </li>
-          </ul>
-        </div>
-      </section>
       <!-- Page Contents-->
       <main class="page-content">
-        <!-- Classic Thumbnail-->
-        <!-- Portfolio Grid 3 columns-->
-        <section class="section-98 section-sm-110">
-          <div class="shell">
-                    <div class="isotope-wrap">
-                      <div class="row">
-                        <!-- Isotope Filters-->
-                        <div class="col-lg-12">
-                          <div class="isotope-filters isotope-filters-horizontal">
-                            <ul class="list-inline list-inline-sm">
-                              <li class="veil-md">
-                                <p>Choose your category:</p>
-                              </li>
-                              <li class="section-relative">
-                                <button data-custom-toggle="isotope-1" data-custom-toggle-disable-on-blur="true" class="isotope-filters-toggle btn btn-sm btn-default">Filter<span class="caret"></span></button>
-                                <ul id="isotope-1" class="list-sm-inline isotope-filters-list">
-                                  <li><a data-isotope-filter="*" data-isotope-group="gallery" href="#" class="active">All</a></li>
-                                  <li><a data-isotope-filter="tab 1" data-isotope-group="gallery" href="#">Facelift</a></li>
-                                  <li><a data-isotope-filter="tab 2" data-isotope-group="gallery" href="#">Liposuction</a></li>
-                                  <li><a data-isotope-filter="tab 3" data-isotope-group="gallery" href="#">Tummy Tuck</a></li>
-                                </ul>
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
+        <!--Sheldue-->
+        <section class="rdparallax">
+          <div class="rdparallaxlayer section-66 section-sm-66">
+            <div class="shell text-right">
+              <div class="range range-xs-center range-md-right">
+                <div class="cell-sm-10 cell-md-8 cell-lg-6">
+                  <h2>Gallery</h2>
+                  <h3>Lorem ipsum dolor sit amet</h3>
+                  <div class="offset-top-0"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
+                </div>
+              </div>
+              <div class="row">
+                       <!-- Isotope Filters-->
+                <div class="col-lg-12 offset-top-20">
+                  <div class="isotope-filters isotope-filters-horizontal">
+                    <ul class="list-inline list-inline-sm">
+                      <li class="veil-md">
+                        <p>Choose your category:</p>
+                      </li>
+                      <li class="section-relative">
+                        <button data-custom-toggle="isotope-1" data-custom-toggle-disable-on-blur="true" class="isotope-filters-toggle btn btn-sm btn-default">Filter<span class="caret"></span></button>
+                        <ul id="isotope-1" class="list-sm-inline isotope-filters-list">
+                          <li><a data-isotope-filter="*" data-isotope-group="gallery" href="#" class="active">All</a></li>
+                          <li><a data-isotope-filter="tab 1" data-isotope-group="gallery" href="#">Facelift</a></li>
+                          <li><a data-isotope-filter="tab 2" data-isotope-group="gallery" href="#">Liposuction</a></li>
+                          <li><a data-isotope-filter="tab 3" data-isotope-group="gallery" href="#">Tummy Tuck</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
                         <!-- Isotope Content-->
-                        <div class="col-lg-12 offset-top-34">
-                          <div data-isotope-layout="fitRows" data-isotope-group="gallery" class="isotope">
-                            <div data-photo-swipe-gallery="gallery" class="row">
-                              <div data-filter="tab 2" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-01_original.jpg">
-                                          <figure><img width="370" height="240" src="images/gallery/gallery-01-370x240.jpg" alt="">
-                                            <figcaption class="thumbnail-custom-caption text-center">
-                                              <h6 class="thumbnail-custom-title text-white">Forehead lift</h6>
-                                              <hr class="divider divider-xs bg-java">
-                                            </figcaption>
-                                          </figure></a>
-                              </div>
-                              <div data-filter="tab 3" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-02_original.jpg">
-                                          <figure><img width="370" height="240" src="images/gallery/gallery-02-370x240.jpg" alt="">
+                <div class="col-lg-12 offset-top-34">
+                  <div data-isotope-layout="fitRows" data-isotope-group="gallery" class="isotope">
+                    <div data-photo-swipe-gallery="gallery" class="row">
+                      <div data-filter="tab 2" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-01_original.jpg">
+                        <figure><img class="img-responsive" src="images/gallery/gallery-01-370x240.jpg" alt="">
+                          <figcaption class="thumbnail-custom-caption text-center">
+                            <h6 class="thumbnail-custom-title text-white">Forehead lift</h6>
+                            <hr class="divider divider-xs bg-java">
+                          </figcaption>
+                        </figure></a>
+                      </div>
+                      <div data-filter="tab 3" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-02_original.jpg">
+                        <figure><img class="img-responsive" src="images/gallery/gallery-02-370x240.jpg" alt="">
                                             <figcaption class="thumbnail-custom-caption text-center">
                                               <h6 class="thumbnail-custom-title text-white">Facelift</h6>
                                               <hr class="divider divider-xs bg-java">
                                             </figcaption>
-                                          </figure></a>
-                              </div>
-                              <div data-filter="tab 2" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-03_original.jpg">
-                                          <figure><img width="370" height="240" src="images/gallery/gallery-03-370x240.jpg" alt="">
+                        </figure></a>
+                      </div>
+                      <div data-filter="tab 2" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-03_original.jpg">
+                        <figure><img class="img-responsive" src="images/gallery/gallery-03-370x240.jpg" alt="">
                                             <figcaption class="thumbnail-custom-caption text-center">
                                               <h6 class="thumbnail-custom-title text-white">Medical Care</h6>
                                               <hr class="divider divider-xs bg-java">
                                             </figcaption>
-                                          </figure></a>
-                              </div>
-                              <div data-filter="tab 2" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-04_original.jpg">
-                                          <figure><img width="370" height="240" src="images/gallery/gallery-04-370x240.jpg" alt="">
+                        </figure></a>
+                      </div>
+                      <div data-filter="tab 2" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-04_original.jpg">
+                        <figure><img class="img-responsive" src="images/gallery/gallery-04-370x240.jpg" alt="">
                                             <figcaption class="thumbnail-custom-caption text-center">
                                               <h6 class="thumbnail-custom-title text-white">Ear Surgery</h6>
                                               <hr class="divider divider-xs bg-java">
                                             </figcaption>
-                                          </figure></a>
-                              </div>
-                              <div data-filter="tab 2" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="1200x800" href="images/gallery/originals/gallery-05_original.jpg">
-                                          <figure><img width="370" height="240" src="images/gallery/gallery-05-370x240.jpg" alt="">
+                        </figure></a>
+                      </div>
+                      <div data-filter="tab 2" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="1200x800" href="images/gallery/originals/gallery-05_original.jpg">
+                        <figure><img class="img-responsive" src="images/gallery/gallery-05-370x240.jpg" alt="">
                                             <figcaption class="thumbnail-custom-caption text-center">
                                               <h6 class="thumbnail-custom-title text-white">Liposuction</h6>
                                               <hr class="divider divider-xs bg-java">
                                             </figcaption>
-                                          </figure></a>
-                              </div>
-                              <div data-filter="tab 1" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="1200x800" href="images/gallery/originals/gallery-06_original.jpg">
-                                          <figure><img width="370" height="240" src="images/gallery/gallery-06-370x240.jpg" alt="">
+                        </figure></a>
+                      </div>
+                      <div data-filter="tab 1" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="1200x800" href="images/gallery/originals/gallery-06_original.jpg">
+                        <figure><img class="img-responsive" src="images/gallery/gallery-06-370x240.jpg" alt="">
                                             <figcaption class="thumbnail-custom-caption text-center">
                                               <h6 class="thumbnail-custom-title text-white">Cleft Lip</h6>
                                               <hr class="divider divider-xs bg-java">
                                             </figcaption>
-                                          </figure></a>
-                              </div>
-                              <div data-filter="tab 1" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-07_original.jpg">
-                                          <figure><img width="370" height="240" src="images/gallery/gallery-07-370x240.jpg" alt="">
+                        </figure></a>
+                      </div>
+                      <div data-filter="tab 1" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-07_original.jpg">
+                        <figure><img wclass="img-responsive" src="images/gallery/gallery-07-370x240.jpg" alt="">
                                             <figcaption class="thumbnail-custom-caption text-center">
                                               <h6 class="thumbnail-custom-title text-white">Eyelid lift</h6>
                                               <hr class="divider divider-xs bg-java">
                                             </figcaption>
-                                          </figure></a>
-                              </div>
-                              <div data-filter="tab 1" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-08_original.jpg">
-                                          <figure><img width="370" height="240" src="images/gallery/gallery-08-370x240.jpg" alt="">
-                                            <figcaption class="thumbnail-custom-caption text-center">
+                        </figure></a>
+                      </div>
+                      <div data-filter="tab 1" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="800x1200" href="images/gallery/originals/gallery-08_original.jpg">
+                        <figure><img width="370" height="240" src="images/gallery/gallery-08-370x240.jpg" alt="">
+                                           <figcaption class="thumbnail-custom-caption text-center">
                                               <h6 class="thumbnail-custom-title text-white">Stem Cell Facelift</h6>
                                               <hr class="divider divider-xs bg-java">
                                             </figcaption>
-                                          </figure></a>
-                              </div>
-                              <div data-filter="tab 1" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="1200x800" href="images/gallery/originals/gallery-09_original.jpg">
-                                          <figure><img width="370" height="240" src="images/gallery/gallery-09-370x240.jpg" alt="">
+                        </figure></a>
+                      </div>
+                      <div data-filter="tab 1" class="col-xs-12 col-sm-6 col-md-4 isotope-item"><a class="thumbnail-custom" data-photo-swipe-item="" data-size="1200x800" href="images/gallery/originals/gallery-09_original.jpg">
+                        <figure><img width="370" height="240" src="images/gallery/gallery-09-370x240.jpg" alt="">
                                             <figcaption class="thumbnail-custom-caption text-center">
                                               <h6 class="thumbnail-custom-title text-white">Laboratory analyses</h6>
                                               <hr class="divider divider-xs bg-java">
                                             </figcaption>
-                                          </figure></a>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
+                        </figure></a>
                       </div>
                     </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </main>
