--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -176,63 +176,59 @@
       </main>
       <!-- Page Footer-->
       <!-- Default footer-->
-      <footer class="section-relative section-top-66 section-bottom-34 page-footer bg-lighter">
-        <div class="shell">
-          <div class="range range-sm-center text-lg-left">
-            <div class="cell-sm-8 cell-md-12">
-              <div class="range range-xs-center">
-                <div class="cell-xs-10 cell-md-4 text-left cell-md-push-3 inset-md-left-50">
-                  <h6>Newsletter</h6>
-                  <hr class="text-subline">
-                  <p class="text-gray-darker">Enter your email address to get the latest news, deals, tips, special events and activities delivered right to your inbox.</p>
-                        <form data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php" class="rd-mailform">
-                          <div class="form-group">
-                            <div class="input-group input-group-sm">
-                              <input placeholder="Your e-mail..." type="email" data-constraints="@Required @Email" name="email" class="form-control text-gray-darker"><span class="input-group-btn">
-                                <button type="submit" class="btn btn-sm btn-primary">Subscribe</button></span>
-                            </div>
-                          </div>
-                        </form>
-                </div>
-                <div class="cell-xs-10 text-xs-left cell-md-4 cell-md-push-2 offset-top-50 offset-md-top-0">
-                  <h6>contact us</h6>
-                  <hr class="text-subline">
-                  <div class="text-center text-lg-left">
-                    <address class="contact-info reveal-sm-inline-block text-left">
-                      <div class="p unit unit-spacing-xxs unit-horizontal">
-                        <div class="unit-left"><span class="icon icon-xxs mdi mdi-phone text-primary"></span></div>
-                        <div class="unit-body"><a href="callto:#" class="text-gray-darker">1-800-1234-567</a><span class="text-gray-darker">, </span><a href="callto:#" class="text-gray-darker">1-800-3214-321</a></div>
-                      </div>
-                      <div class="p unit unit-horizontal unit-spacing-xxs">
-                        <div class="unit-left"><span class="icon icon-xxs mdi mdi-map-marker text-primary"></span></div>
-                        <div class="unit-body"><a href="#" class="text-gray-darker">1101 Brickell Ave South Tower 8th Floor <br>
-Miami, FL 33131</a></div>
-                      </div>
-                      <div class="p unit unit-spacing-xxs unit-horizontal offset-top-16">
-                        <div class="unit-left"><span class="icon icon-xxs mdi mdi-email-outline text-primary"></span></div>
-                        <div class="unit-body"><a href="mailto:#" class="text-primary">info@lotusdigitalsolutions.com</a></div>
-                      </div>
-                    </address>
-                  </div>
-                </div>
-                <div class="cell-xs-10 offset-top-66 cell-md-4 cell-md-push-1 offset-md-top-0">
-                  <!-- Footer brand-->
-                  <div class="footer-brand"><a href="index.html"><img width='203' height='70' class='img-responsive' src='images/logo-dark.png' alt=''/></a></div>
-                  <div class="offset-top-50 offset-md-top-90">
-                          <ul class="list-inline">
-                            <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-white"></a></li>
-                            <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-white"></a></li>
-                            <li><a href="http://instagram.com" class="icon fa fa-instagram icon-xxs icon-circle icon-white"></a></li>
-                            
-                          </ul>
-                  </div>
-                </div>
-              </div>
+      <footer class="section-relative page-footer bg-white context-light">
+        <div>
+          <div class="pinkfooter">
+            <div class="col-md-12 text-md-center offset-top-20">
+              <ul class="list-inline">
+                <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-darker"></a></li>                 
+              </ul>
+            </div>
+            <div class="col-md-12 text-md-center offset-top-20">
+              <ul class="list-inline footer-link">
+                <li><a href="about.html">About</a>
+                </li>
+                <li><a href="our-team.html">Team</a>
+                </li>
+                <li><a href="services.html">Procedures</a>
+                </li>
+                <li><a href="grid-gallery.html">Gallery</a>
+                </li>
+                <li><a href="testimonials.html">Testimonials</a>
+                </li>
+                <li><a href="costs.html">Costs</a>
+                </li>
+                <li><a href="appointments.html">Appointments</a>
+                </li>      
+                <li><a href="contacts.html">Contacts</a>
+                </li>
+                <li><a href="privacy.html">Privacy Policy</a>
+                </li>
+                <li><a href="sitemap.html">Site Map</a>
+                </li>
+                <li><a href="disclaimer.html">Disclaimer</a>
+                </li>
+              </ul>
             </div>
           </div>
-        </div>
-        <div class="shell offset-top-50 offset-md-top-60">
-          <p class="text-gray text-md-left">&copy; <span id="copyright-year"></span> All Rights Reserved. <a href="privacy.html" class="text-gray">Terms of Use and Privacy Policy</a></p>
+          <div class="purplefooter">
+            <div class="col-md-4 text-md-center offset-top-20">
+              <a href="index.html"><img width='203' height='70' class='img-responsive' src='images/logo.png' alt=''/></a>
+            </div>
+            <div class="col-md-4 text-md-center offset-top-20">
+              <p class="text-white">75 Arlington St. - Ste. 500 - Boston, MA 02116<br><a class="text-white" href="tel:555-555-1212">P: 617.987.5564</a> - &copy; <span id="copyright-year"></span> All Rights Reserved.</p>
+            </div>
+            <div class="col-md-4 text-md-center offset-top-20">
+              <ul class="list-inline">
+                <li><img class='img-responsive association' src='images/association1.jpg' alt=''/></li>
+                <li><img class='img-responsive association' src='images/association2.jpg' alt=''/></li>
+                <li><img class='img-responsive association' src='images/association3.jpg' alt=''/></li>                 
+              </ul>
+            </div>
+          </div>  
         </div>
       </footer>
     </div>
