all the bugs I could find

--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
           <div class="rdparallaxlayer section-66 section-sm-66">
             <div class="shell">
               <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 offset-top-30">
                   <img class="img-responsive team-member" src="images/pages/our-team-07-384x410.jpg">
                   <div class="lighttransparent offset-top-20">
                     <h5>Ricky Baker</h5>
@@ -212,7 +212,7 @@
                     <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 offset-top-30">
                   <img class="img-responsive team-member" src="images/pages/our-team-08-384x410.jpg">
                   <div class="lighttransparent offset-top-20">
                     <h5>Ricky Baker</h5>
@@ -227,7 +227,7 @@
                     <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 offset-top-30">
                   <img class="img-responsive team-member" src="images/pages/our-team-09-384x410.jpg">
                   <div class="lighttransparent offset-top-20">
                     <h5>Ricky Baker</h5>
