--- a/our-team.html
+++ b/our-team.html
@@ -120,7 +120,7 @@
                 </div>
               </div>
               <div class="row offset-top-60">
-                <div class="col-md-4">
+                <div class="col-md-4 offset-top-30">
                   <img class="img-responsive team-member" src="images/pages/our-team-07-384x410.jpg">
                   <div class="lighttransparent offset-top-20">
                     <h5>Ricky Baker</h5>
@@ -135,7 +135,7 @@
                     <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 offset-top-30">
                   <img class="img-responsive team-member" src="images/pages/our-team-08-384x410.jpg">
                   <div class="lighttransparent offset-top-20">
                     <h5>Ricky Baker</h5>
@@ -150,7 +150,7 @@
                     <div class="offset-top-20"><a href="make-an-appointment.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 offset-top-30">
                   <img class="img-responsive team-member" src="images/pages/our-team-09-384x410.jpg">
                   <div class="lighttransparent offset-top-20">
                     <h5>Ricky Baker</h5>
